source/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

:root {
    --black: #000000;
    --black-a1: rgba(0, 0, 0, 0.7);
    --black-a2: rgba(0, 0, 0, 0.5);
    --black-a3: rgba(0, 0, 0, 0.2);
    --white: #FFFFFF;
    --white-a1: rgba(255, 255, 255, 0.7);
    --white-a2: rgba(255, 255, 255, 0.5);
    --white-a3: rgba(255, 255, 255, 0.2);
    --red: #DB2E2E;
    --pink-grad: linear-gradient(0deg, #FFD1D1 0%, #EEEEEE 100%);
    --pink-dark-grad: linear-gradient(180deg, #ffffffb0 99.99%, #ffd1d1b0 100%, #ffd1d1b0 100%);
    --orange: #E95D31;
    --orangered-grad: linear-gradient(180deg, #ff0000c7 0%, #E8582B 100%);
    --orange-light-grad: linear-gradient(180deg, #ff000036 0%, #E8582B 100%), conic-gradient(from 1.14deg at 42.54% 1226.03%, #BDD915 -22.72deg, #1915d9e2 160.22deg, #bdd91500 163.43deg, #BDD915 337.28deg, #1915d9e2 520.22deg);
    --orange-dark-grad: linear-gradient(180deg, #E95D31 0%, rgba(255, 255, 255, 0) 100%);
    --orange-dark-grad-1: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #E95D31 100%);
    --green: #34DBB3;
    --green-grad: linear-gradient(180deg,  #ffffff00 0%, #0D927A 100%);
    --green-grad-1: linear-gradient(180deg, #0D927A 0%, rgba(255, 255, 255, 0) 100%);
    --button-text-size: 18px;
}

html{
    background: url('../images/background.png') no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100%;
}

body {
    width: 100vw;
    min-height: 100vh;
    height: 100%;
    margin: 0;
}

main{
    width: 100%;
    min-height: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.center-container{
    width: 25%;
    min-width: 300px;
    height: 70%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-evenly;
}

.center-container.slide-open {
    animation: slide-center-out 0.5s ease-out forwards;
}
.center-container.slide-close {
    animation: slide-center-in 0.5s ease-out forwards;
}

.timer-container{
    background: var(--white-a1);
    height: 80%;
    width: 100%;
    display: flex;
    border-radius: 21px;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
}

.timer{
    width: 75%;
    height: 70%;
}

.timer_circle_container {
    background-color: white;
    stroke: none;
  }

  .timer_basic {
      fill : none;
      stroke: none;
  }

  /*The SVG path that displays the timer's progress */
  .timer_path_elapsed {
    fill: none;
    stroke-width: 2px;
    /* stroke: #DB2E2E; */
    transform: rotate(90deg) scale(1, -1) ;
    transform-origin: center;
    transition: 1s linear all;
    stroke-linecap: round;
  }
  
  #countdownText {
    /** Organization of text and positioning. **/
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    font-size: 20px;

    opacity: 1.0;
    transition: 1.0s;

    display: flex;
    justify-content: center;
    align-items: center;
  }

#start-stop-button{
    width: 40%;
    height: 60px;
    border-radius: 40px;
    font-family: Roboto;
    color: white;
    font-size: var(--button-text-size);
}

#start-stop-button:focus{
    outline: 0;
}

.pomodoro-button{
    background: var(--orange-dark-grad), var(--red);
}

.pomodoro-button:active{
    background: var(--orange-dark-grad-1), var(--red);
}

.break-button{
    background: var(--green-grad), var(--green);
}

.break-button:active{
    background: var(--green-grad-1), var(--green); 
}

.task-button{
    background: var(--orange-light-grad);
    border-radius: 5px;
    height: 50px;
    font-family: Roboto;
    color: white;
    font-size: var(--button-text-size);
}

.task-button:active{
    background: var(--orangered-grad), white;
    outline: 0;
}

.task-button:focus{
    outline: 0;
}

#stats-container {
    position: fixed;
    height: calc(100vh - 36px);
    width: 400px;
    margin: 18px 18px 18px 18px;
    top: 0;
    right: -418px;
    font-family: Roboto;
}

#stats-container.slide-open {
    animation: slide-right-out 0.5s ease-out forwards;
}
#stats-container.slide-close {
    animation: slide-right-in 0.5s ease-out forwards;
}

#stats-container h1 {
    margin-top: 4px;
    margin-bottom: 4px;
}

#stats-container h2 {
    margin-top: 8px;
    margin-bottom: 8px;
    padding-bottom: 4px;
    border-bottom: 1px solid black;
}

#stats-pane {
    box-sizing: border-box;
    height: 100%;
    border-radius: 8px;
    padding: 24px 48px 24px 48px;
    background: var(--pink-grad);
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: space-around;
    justify-items: flex-start;
    justify-content: space-around;
}

#stats-overview {
    flex-basis: 35%;
}

.stats-box {
    height: 20%;
    width: 100%;
    padding: 12px 12px 12px 12px;
    border-radius: 8px;
    background-color: white;
    box-shadow: 5px 4px 4px 2px var(--black-a3);
    display: flex;
    flex-direction: column;
    align-items: stretch;
    align-content: stretch;
    justify-items: flex-start;
    justify-content: flex-start;
}

.stats-flex {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    align-content: center;
    justify-content: space-between;
}

.stats-row {
    display:flex;
    flex-direction: row;
    align-items:center;
    align-content:center;
    justify-content: space-between;
}

.stats-button {
    position: fixed;
    top: 20px;
    right: 20px;
    width: 100px;
    height: 100px;
    background: var(--white-a1);
    border-radius: 15px;
    outline: 0;
}

.stats-button:active {
    opacity: 90%;
    /* background: var(--white-a2); */
}

#stats-close-button {
    position: absolute;
    top: 12px;
    right: 12px;
    width: 30px;
    height: 30px;
    background: var(--white-a1);
    border-radius: 16px;
    outline: 0;
    display: flex;
    align-items: center;
}

@media (max-width: 800px) {
    #stats-container {
        height: calc(100vh - 36px);
        width: calc(100vw - 36px);
        margin: 18px 18px 18px 18px;
        right: calc(-100vw + -18px);
    }
    
    #stats-container h2 {
        margin-top: 4px;
        padding-bottom: 4px;
    }

    #stats-pane {
        padding: 16px 32px 16px 32px;
    }
}

@media (max-width: 480px) {
    #stats-container {
        height: calc(100vh - 16px);
        width: calc(100vw - 16px);
        margin: 8px 8px 8px 8px;
        right: calc(-100vw + -8px);
    }

    #stats-pane {
        padding: 12px 24px 12px 24px;
    }

    .stats-button {
        top: 12px;
        right: 12px;
    }
}

@keyframes slide-right-out {
    to { right: 0 }
}

@keyframes slide-right-in {
    from { right: 0 }
}

@keyframes slide-center-out {
    from { transform: translate(0, 0) }
    to { transform: translate(-15vw, 0) }
}

@keyframes slide-center-in {
    from { transform: translate(-15vw, 0) }
    to { transform: translate(0, 0) }
}

.counters-container {
    font-family: "Roboto";
    font-size: var(--button-text-size);
    color: white;
    width: 25%;
    min-width: 300px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    top: 6.5%;
}

.counters-container.slide-open {
    animation: slide-center-out 0.5s ease-out forwards;
}
.counters-container.slide-close {
    animation: slide-center-in 0.5s ease-out forwards;
}

